messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
      version: green
  template:
    metadata:
      labels:
        app: django
        version: green
    spec:
      containers:
        - name: django
          image: your-django-app:green
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
