messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-deployment
  labels:
    app: messaging-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
  template:
    metadata:
      labels:
        app: messaging-app
    spec:
      containers:
        - name: messaging-app
          image: messaging_app   
          imagePullPolicy: IfNotPresent 
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 8000
          command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]

---

apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  type: ClusterIP    # Internal access only
  selector:
    app: messaging-app
  ports:
    - port: 8000         # Service port (inside cluster)
      targetPort: 8000   # Container port
